--- a/index.html
+++ b/index.html
@@ -7,11 +7,6 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/feather-icons/dist/feather.min.js"></script>
-    <script src="https://unpkg.com/feather-icons"></script>
-    <script src="components/binary-manager.js"></script>
-    <script src="components/model-manager.js"></script>
-    <script src="components/server-control.js"></script>
-    <script src="components/param-editor.js"></script>
 </head>
 <body class="bg-slate-900 text-slate-100 font-sans antialiased overflow-hidden">
     <div id="app" class="h-screen flex flex-col">
@@ -122,7 +117,7 @@
                     <div class="bg-slate-800 rounded-xl border border-slate-700 shadow-xl overflow-hidden">
                         <div class="px-6 py-4 border-b border-slate-700 bg-slate-800/50 flex justify-between items-center">
                             <h3 class="text-lg font-semibold text-slate-200">Server Logs</h3>
-                            <button onclick="clearLogs()" class="text-xs text-slate-400 hover:text-slate-200">Clear</button>
+                            <button onclick="clearLogs()" class="text-xs text-slate-400 hover:text-slate-200 transition-colors">Clear</button>
                         </div>
                         <div id="log-container" class="p-4 h-64 overflow-y-auto font-mono text-sm bg-slate-950 text-slate-300 space-y-1">
                             <p class="text-slate-500 italic">Waiting for server activity...</p>
@@ -190,7 +185,19 @@
     <!-- Toast Container -->
     <div id="toast-container" class="fixed bottom-6 right-6 z-50 flex flex-col gap-2"></div>
 
+    <!-- Component Scripts -->
+    <script src="binary-manager.js"></script>
+    <script src="model-manager.js"></script>
+    <script src="server-control.js"></script>
+    <script src="param-editor.js"></script>
+    
+    <!-- Main Script -->
     <script src="script.js"></script>
-    <script>feather.replace();</script>
+    
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            feather.replace();
+        });
+    </script>
 </body>
 </html>
